--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   },
   "homepage": "https://github.com/shahmeernavid/es6-script-starter",
   "devDependencies": {
-    "gulp-mocha": "^2.1.3",
+    "gulp-mocha": "^2.1.3"
   },
   "dependencies": {
+    "babel": "^5.8.21",
     "gulp": "^3.9.0",
+    "gulp-babel": "^5.2.0",
+    "gulp-mocha": "^2.1.3",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.6",
-    "gulp-babel": "^5.2.0"
+    "source-map-support": "^0.3.2"
   }
 }
