--- a/package.json
+++ b/package.json
@@ -1,31 +1,51 @@
 {
   "name": "es6-script-starter",
   "version": "1.0.0",
-  "description": "Starter code for ES6 script project.",
+  "description": "Starter code for react projects.",
   "main": "index.js",
   "directories": {
     "test": "tests"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/shahmeernavid/es6-script-starter.git"
+    "url": "https://github.com/shahmeernavid/react-starter.git"
   },
   "author": "Shahmeer Navid <shahmeernavid@gmail.com> (http://shahmeer.co/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shahmeernavid/es6-script-starter/issues"
+    "url": "https://github.com/shahmeernavid/react-starter/issues"
   },
-  "homepage": "https://github.com/shahmeernavid/es6-script-starter",
+  "homepage": "https://github.com/shahmeernavid/react-starter",
   "devDependencies": {
-    "gulp-mocha": "^2.1.3"
-  },
-  "dependencies": {
-    "babel": "^5.8.21",
+    "babel": "^5.8.23",
+    "babel-core": "^5.8.24",
+    "babel-loader": "^5.3.2",
+    "babel-runtime": "^5.8.24",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.2.0",
     "gulp-mocha": "^2.1.3",
+    "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.6",
-    "source-map-support": "^0.3.2"
+    "nodemon": "^1.5.1",
+    "object-assign": "^4.0.1",
+    "ps-tree": "^1.0.1",
+    "redux-devtools": "^2.1.2",
+    "watch": "^0.16.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.14.0",
+    "memory-fs": "^0.2.0",
+    "morgan": "^1.6.1",
+    "node-bourbon": "^4.2.3",
+    "node-jsx": "^0.13.3",
+    "react": "^0.13.3",
+    "react-redux": "^2.1.2",
+    "react-router": "^0.13.3",
+    "redux": "^3.0.0",
+    "source-map-support": "^0.3.2",
+    "through": "^2.3.8",
+    "vinyl": "^0.5.1",
+    "webpack": "^1.12.0"
   }
 }
