--- a/package.json
+++ b/package.json
@@ -19,37 +19,36 @@
     "url": "https://github.com/shahmeernavid/react-starter/issues"
   },
   "homepage": "https://github.com/shahmeernavid/react-starter",
-  "devDependencies": {
+  "dependencies": {
     "babel": "^5.8.23",
     "babel-core": "^5.8.24",
     "babel-loader": "^5.3.2",
     "babel-runtime": "^5.8.24",
+    "body-parser": "^1.14.0",
+    "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.2.0",
     "gulp-mocha": "^2.1.3",
+    "gulp-nodemon": "^2.0.4",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.6",
-    "nodemon": "^1.5.1",
-    "object-assign": "^4.0.1",
-    "ps-tree": "^1.0.1",
-    "redux-devtools": "^2.1.2",
-    "watch": "^0.16.0"
-  },
-  "dependencies": {
-    "body-parser": "^1.14.0",
-    "express": "^4.13.3",
     "memory-fs": "^0.2.0",
     "morgan": "^1.6.1",
     "node-bourbon": "^4.2.3",
     "node-jsx": "^0.13.3",
+    "object-assign": "^4.0.1",
+    "ps-tree": "^1.0.1",
     "react": "^0.13.3",
     "react-redux": "^2.1.2",
     "react-router": "^0.13.3",
     "redux": "^3.0.0",
-    "source-map-support": "^0.3.2",
+    "redux-devtools": "^2.1.2",
+    "source-map-support": "^0.3.3",
     "through": "^2.3.8",
     "vinyl": "^0.5.1",
+    "vinyl-fs": "^2.2.1",
+    "watch": "^0.16.0",
     "webpack": "^1.12.0"
   }
 }
